# ParaFilter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bench_report.txt  input.txt
benchmark/: mybench.cpp
src/: image.cpp  image_processing.cpp  main.cpp
src/include/: image.h  image_processing.h
test/: test_main.cpp
